fix wave gap on mobile

--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 .waves {
   position:relative;
   width: 100%;
-  height:15vh;
+  height:50vh;
   margin-bottom:-7px; /*Fix for safari gap*/
   min-height:100px;
   max-height:150px;
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    position:relative;
+    width: 100%;
+    height:18vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+  }
 }
 
 /* Animation */
